--- a/index.liquid
+++ b/index.liquid
@@ -4,4 +4,5 @@ title: 11ty Boilerplate
 ---
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
+{% name 'Andy' 'Liang' %}
 <img alt="pine" src="/images/pine.png" width="50" />
